<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>oasis-services</artifactId>
		<groupId>io.github.oasis</groupId>
		<version>1.0-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<groupId>io.github.oasis.services.stats</groupId>
	<artifactId>stats-api</artifactId>
	<name>stats-api</name>
	<description>Stats API for Oasis Engine</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-db-redis</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-mod-points</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-mod-badges</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-mod-milestones</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-mod-challenges</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-mod-ratings</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-ext-rabbitstream</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.oasis</groupId>
			<artifactId>oasis-ext-kafkastream</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commonsio.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-sqlobject</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-jackson2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jdbi</groupId>
			<artifactId>jdbi3-spring5</artifactId>
			<version>${jdbi.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>${hikari.version}</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>${liquibase.version}</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.db.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson</artifactId>
			<version>${redisson.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>RELEASE</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<type>pom</type>
				<version>${springboot.version}</version>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jdbi</groupId>
				<artifactId>jdbi3-bom</artifactId>
				<type>pom</type>
				<version>${jdbi.version}</version>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>oasis-stats-api</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
